fixed side scrolling issue on mobile

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,5 +1,5 @@
 #form {
   display: flex;
   justify-content: left;
-
+  padding-left: 1.5rem;
 }
