--- a/app/assets/stylesheets/components/_socials.scss
+++ b/app/assets/stylesheets/components/_socials.scss
@@ -1,7 +1,7 @@
 .side-style {
   width: 40px;
   position: fixed;
-  bottom: 250px;
+  bottom: 350px;
   left: 40px;
   right: auto;
   z-index: 10;
